<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.tripathivivek98.weathercast.WeatherViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg"
        android:orientation="vertical"
        android:padding="25dp"
        tools:context=".HomeActivity">

        <RelativeLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isLoading ? View.GONE : (viewModel.isError ? View.GONE : View.VISIBLE)}">

            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <!-- Search/City Change Icon (Clickable in Activity) -->
                <ImageView
                    android:id="@+id/searchIcon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="-30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    android:src="@drawable/info"
                    app:tint="@color/white"
                    android:contentDescription="@string/app_name"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.weatherData.address}"
                    tools:text="Noida, IN"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/updatedAt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.weatherData.updatedAtText}"
                    tools:text="Updated at: 30/09/2025 08:00 PM"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{viewModel.weatherData.status}"
                    tools:text="Clouds"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-thin"
                    android:text="@{viewModel.weatherData.temp}"
                    tools:text="24°C"
                    android:textSize="70sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tempMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.weatherData.tempMin}"
                        tools:text="Min Temp : 18°C" />

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tempMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.weatherData.tempMax}"
                        tools:text="Max Temp : 30°C" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <!-- Row 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/DetailBoxStyle">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunrise"
                            app:tint="@color/white"
                            android:contentDescription="@string/sunrise" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.weatherData.sunrise}"
                            tools:text="5:30am"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        style="@style/DetailBoxStyle">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunset"
                            app:tint="@color/white"
                            android:contentDescription="@string/sunset" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.weatherData.sunset}"
                            tools:text="5:30pm"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        style="@style/DetailBoxStyle">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/wind"
                            app:tint="@color/white"
                            android:contentDescription="@string/wind" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.weatherData.windSpeed}"
                            tools:text="5.2 m/s"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <!-- Row 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/DetailBoxStyle">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/pressure"
                            app:tint="@color/white"
                            android:contentDescription="@string/pressure" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.weatherData.pressure}"
                            tools:text="1012 hPa"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        style="@style/DetailBoxStyle">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity"
                            app:tint="@color/white"
                            android:contentDescription="@string/humidity" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.weatherData.humidity}"
                            tools:text="68%"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        style="@style/DetailBoxStyle">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/info"
                            app:tint="@color/white"
                            android:contentDescription="@string/information" />

                        <Space
                            android:layout_width="5dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/app"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/information"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/error"
            android:visibility="@{viewModel.isError ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>

</layout>